--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "http-proxy-middleware": "^2.0.0",
     "js-cookie": "^2.2.1",
     "react": "^17.0.2",
+    "react-app": "^1.1.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.17.0",
     "react-redux": "^7.2.4",
