--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
     "http-proxy-middleware": "^1.0.5",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "mongoose": "^5.9.27",
     "nodemon": "^2.0.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react": "^17.0.2",
+    "react-app": "^1.1.2",
+    "react-scripts": "^4.0.3"
   },
   "devDependencies": {
     "@types/js-cookie": "^2.2.6",
