--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "http-proxy-middleware": "^2.0.0",
     "js-cookie": "^2.2.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-app": "^1.1.2",
     "react-dom": "^17.0.2",
