--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "client": "yarn --cwd client start",
     "dev": "concurrently \"yarn server\" \"yarn client\"",
     "test": "yarn start",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client/apply && npm install --prefix client/main && npm run build --prefix client/apply && npm run build --prefix client/main"
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx,css,scss}'"
   },
   "author": "",
   "license": "ISC",
